Working on notifications service

--- a/auction-service/iam/AuctionsTableIAM.yml
+++ b/auction-service/iam/AuctionsTableIAM.yml
@@ -24,6 +24,7 @@ AuctionsTableUpdateAuctionIAM:
         Effect: Allow
         Action:
           - dynamodb:UpdateItem
+          - dynamodb:GetItem
         Resource: 
           - ${self:custom.AuctionsTable.arn}
           
