--- a/notifications-service/serverless.yml
+++ b/notifications-service/serverless.yml
@@ -1,84 +1,62 @@
-
-
 service: notifications-service
 
-
-# You can pin your service to only deploy with a specific Serverless version
-# Check out our docs for more details
-frameworkVersion: '3'
+frameworkVersion: "3"
 
 provider:
   name: aws
   runtime: nodejs18.x
-  memorySize: 256
+  #  Setting the memory allocation to the optimal level can help optimize the function's performance and save costs. default = 128MB
+  memorySize: 128
   stage: ${opt:stage, 'dev'}
   region: us-east-2
   iam:
     role:
       statements:
-       - ${file(iam/SendMailIAM.yml):SendMailIAM}
+        - ${file(iam/SendMailIAM.yml):SendMailIAM}
   environment:
     SES_SENDER_EMAIL: "sehrishwaheed30@gmail.com"
 
-	
 plugins:
   - serverless-plugin-typescript
-
 
 functions:
   sendMail:
     handler: src/handlers/sendMail.handler
-#    The following are a few example events you can configure
-#    NOTE: Please make sure to change your handler code to work with those events
-#    Check the event documentation for details
-#    events:
-#      - httpApi:
-#          path: /users/create
-#          method: get
-#      - websocket: $connect
-#      - s3: ${env:BUCKET}
-#      - schedule: rate(10 minutes)
-#      - sns: greeter-topic
-#      - stream: arn:aws:dynamodb:region:XXXXXX:table/foo/stream/1970-01-01T00:00:00.000
-#      - alexaSkill: amzn1.ask.skill.xx-xx-xx-xx
-#      - alexaSmartHome: amzn1.ask.skill.xx-xx-xx-xx
-#      - iot:
-#          sql: "SELECT * FROM 'some_topic'"
-#      - cloudwatchEvent:
-#          event:
-#            source:
-#              - "aws.ec2"
-#            detail-type:
-#              - "EC2 Instance State-change Notification"
-#            detail:
-#              state:
-#                - pending
-#      - cloudwatchLog: '/aws/lambda/hello'
-#      - cognitoUserPool:
-#          pool: MyUserPool
-#          trigger: PreSignUp
-#      - alb:
-#          listenerArn: arn:aws:elasticloadbalancing:us-east-1:XXXXXX:listener/app/my-load-balancer/50dc6c495c0c9188/
-#          priority: 1
-#          conditions:
-#            host: example.com
-#            path: /hello
-
-#    Define function environment variables here
-#    environment:
-#      variable2: value2
+    # trigger for this functions is SQS
+    events:
+      - sqs:
+          arn: ${self:custom.mailQueue.arn}
+          # means 1 request will be processed at a time (for testing purpose)
+          # default is 10 and also maximum
+          batchSize: 1
 
 # you can add CloudFormation resource templates here
-#resources:
-#  Resources:
-#    NewResource:
-#      Type: AWS::S3::Bucket
-#      Properties:
-#        BucketName: my-new-bucket
-#  Outputs:
-#     NewOutput:
-#       Description: "Description for the output"
-#       Value: "Some output value"
+resources:
+  Resources:
+    MailQueue: ${file(./resources/MailQueue.yml):MailQueue}
+  Outputs:
+    MailQueueArn: ${file(./resources/MailQueue.yml):Outputs.MailQueueArn}
+    MailQueueUrl: ${file(./resources/MailQueue.yml):Outputs.MailQueueUrl}
+
 custom:
+  mailQueue:
+    name: MailQueue-${self:provider.stage}
+    arn: !GetAtt MailQueue.Arn
+    # Ref intrinsic function returns url of Queue
+    url: !Ref MailQueue
   bundle:
     linting: true
+
+# other services send messages to this queue
+# then messages will be forwarded to notification services by sqs queue we built
+# and the emails will be sent
+# for this other services require url of the message queue
+
+
+# using outputs you can output variables from one stack 
+# and import them in other stack like global variables
+# sqs message queues have public urls used by clients to send messages to queue
+# by using these outputs we create a sort of dependency
+# where if we try to deploy suppose auction service to prod
+# but notification service isnot deployed we will get an error
+# so notification service will become dependency of that service for smooth operation of that service
