--- a/auction-service/serverless.yml
+++ b/auction-service/serverless.yml
@@ -16,42 +16,11 @@ provider:
   environment:
     AUCTIONS_TABLE_NAME: ${self:custom.AuctionsTable.name}
     MAIL_QUEUE_URL: ${self:custom.MailQueue.url}
+    AUCTIONS_BUCKET_NAME: ${self:custom.AuctionsBucket.name}
 
 plugins:
   - serverless-plugin-typescript
   - serverless-iam-roles-per-function
-
-
-
-# you can add statements to the Lambda function's IAM Role here
-#  iam:
-#    role:
-#      statements:
-#        - Effect: "Allow"
-#          Action:
-#            - "s3:ListBucket"
-#          Resource: { "Fn::Join" : ["", ["arn:aws:s3:::", { "Ref" : "ServerlessDeploymentBucket" } ] ]  }
-#        - Effect: "Allow"
-#          Action:
-#            - "s3:PutObject"
-#          Resource:
-#            Fn::Join:
-#              - ""
-#              - - "arn:aws:s3:::"
-#                - "Ref" : "ServerlessDeploymentBucket"
-#                - "/*"
-
-# you can define service wide environment variables here
-#  environment:
-#    variable1: value1
-
-# you can add packaging information here
-#package:
-#  patterns:
-#    - '!exclude-me.js'
-#    - '!exclude-me-dir/**'
-#    - include-me.js
-#    - include-me-dir/**
 
 functions:
   createAuction:
@@ -65,6 +34,9 @@ functions:
       - http:
           path: /auction
           method: post
+          # this is going to allow request origin allowed for preflight requests
+          # allowed origins should be in lambda functions for that im using middy cors
+          # https://www.serverless.com/blog/cors-api-gateway-survival-guide/
           cors: true
           authorizer: ${self:custom.authorizer}
   getAuctions:
@@ -73,6 +45,7 @@ functions:
       - http:
           method: get
           path: /auctions
+          cors: true
           # arn of the lambda authorizer
           # our auth service is in the same account as this service
           # else we would assume a role
@@ -85,6 +58,7 @@ functions:
       - http:
           method: get
           path: /auction/${id}
+          cors: true
           authorizer: ${self:custom.authorizer}
     iamRoleStatements:
       - ${file(./iam/AuctionsTableIAM.yml):AuctionsTableGetAuctionIAM}
@@ -94,6 +68,7 @@ functions:
       - http:
           method: PATCH
           path: auction/{id}/bid
+          cors: true
           authorizer: ${self:custom.authorizer}
     iamRoleStatements:
       - ${file(./iam/AuctionsTableIAM.yml):AuctionsTableUpdateAuctionIAM}
@@ -106,39 +81,28 @@ functions:
       # allow lambda functions to send messages to this queue
       - ${file(./iam/MailQueueIAM.yml):MailQueueIAM}
 
-  # - websocket: $connect
-  # - s3: ${env:BUCKET}
-  # - schedule: rate(10 minutes)
-  # - sns: greeter-topic
-  # - stream: arn:aws:dynamodb:region:XXXXXX:table/foo/stream/1970-01-01T00:00:00.000
-  # - alexaSkill: amzn1.ask.skill.xx-xx-xx-xx
-  # - alexaSmartHome: amzn1.ask.skill.xx-xx-xx-xx
-  # - iot:
-  #     sql: "SELECT * FROM 'some_topic'"
-  # - cloudwatchEvent:
-  #     event:
-  #       source:
-  #         - "aws.ec2"
-  #       detail-type:
-  #         - "EC2 Instance State-change Notification"
-  #       detail:
-  #         state:
-  #           - pending
-  # - cloudwatchLog: '/aws/lambda/hello'
-  # - cognitoUserPool:
-  #     pool: MyUserPool
-  #     trigger: PreSignUp
-  # - alb:
-  #     listenerArn: arn:aws:elasticloadbalancing:us-east-1:XXXXXX:listener/app/my-load-balancer/50dc6c495c0c9188/
-  #     priority: 1
-  #     conditions:
-  #       host: example.com
-  #       path: /hello
-# you can add CloudFormation resource templates here
+  uploadAuctionPicture:
+    handler: src/handlers/uploadAuctionPicture.handler
+    events:
+      - http:
+          method: PATCH
+          cors: true
+          path: auction/{id}/picture
+          authorizer: ${self:custom.authorizer}
+    iamRoleStatements:
+      - ${file(./iam/AuctionsTableIAM.yml):AuctionsTableUpdateAuctionIAM}
+      - ${file(./iam/AuctionsBucketIAM.yml):AuctionsBucketIAM}
+  orderReceipt:
+    handler: src/handlers/orderReceipt.handler
+    # will create a public url
+    # can also configure cors here
+    url: true
 
 resources:
   Resources:
     AuctionsTable: ${file(./resources/AuctionsTable.yml):AuctionsTable}
+    AuctionsBucket: ${file(./resources/AuctionsBucket.yml):AuctionsBucket}
+    AuctionsBucketPolicy: ${file(./resources/AuctionsBucket.yml):AuctionsBucketPolicy}
 
 custom:
   #psudeo parameters = #{AWS::Region}:#{AWS::AccountId}
@@ -154,9 +118,8 @@ custom:
     # access cloudformation outputs from notification service
     arn: ${cf:notifications-service-${self:provider.stage}.MailQueueArn}
     url: ${cf:notifications-service-${self:provider.stage}.MailQueueUrl}
-
-
-
+  AuctionsBucket:
+    name: auctions-bucket-sdsjj32kjds-${self:provider.stage}
 # custom variable self, refers to this serverless.yml file
 # and then we can select object from upper scope of this file provider
 # self:provider.stage
