streaming with query parameters and handler errors

--- a/auction-service/package.json
+++ b/auction-service/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.114",
     "@types/http-errors": "^2.0.1",
+    "@types/qs": "^6.9.7",
     "@types/uuid": "^9.0.1",
     "aws-lambda": "^1.0.7",
     "serverless-iam-roles-per-function": "^3.2.0",
