Add event bus and lambda function and sqs

--- a/auction-service/iam/EventBridgeIAM.yml
+++ b/auction-service/iam/EventBridgeIAM.yml
@@ -1,4 +1,5 @@
 EventBridgeIAM:
-  - Effect: Allow
-    Action: events.PutEvents
-    Resource: !GetAtt EventBridge.Arn
+  Effect: Allow
+  Action: events:PutEvents
+  Resource: !GetAtt AuctionsEventBridge.Arn
+
