--- a/auction-service/package.json
+++ b/auction-service/package.json
@@ -14,12 +14,14 @@
     "@types/http-errors": "^2.0.1",
     "@types/uuid": "^9.0.1",
     "aws-lambda": "^1.0.7",
+    "serverless-apigateway-service-proxy": "^2.2.1",
     "serverless-iam-roles-per-function": "^3.2.0",
     "serverless-plugin-typescript": "^2.1.4",
     "typescript": "^5.0.4"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.321.1",
+    "@aws-sdk/client-eventbridge": "^3.328.0",
     "@aws-sdk/client-s3": "^3.327.0",
     "@aws-sdk/client-sqs": "^3.321.1",
     "@aws-sdk/lib-dynamodb": "^3.321.1",
