--- a/auction-service/tsconfig.json
+++ b/auction-service/tsconfig.json
@@ -10,5 +10,8 @@
       "lib": ["es2015"],
       "rootDir": "./",
       "esModuleInterop": true
-    }
+    },
+    "exclude": [
+      "node_modules"
+    ]
   }
