--- a/auction-service/resources/AuctionsTable.yml
+++ b/auction-service/resources/AuctionsTable.yml
@@ -27,3 +27,13 @@ AuctionsTable:
             KeyType: RANGE
         Projection:
           ProjectionType: ALL
+
+Outputs:
+  AuctionsTableName:
+    Value: ${self:custom.AuctionsTable.name}
+    Export:
+      Name: AuctionsTable-${sls:stage}-Name
+  AuctionsTableArn:
+    Value: ${self:custom.AuctionsTable.arn}
+    Export:
+      Name: AuctionsTable-${sls:stage}-Arn
