--- a/orders-service/package.json
+++ b/orders-service/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.328.0",
     "@aws-sdk/client-s3": "^3.327.0",
+    "@aws-sdk/lib-dynamodb": "^3.328.0",
     "serverless-iam-roles-per-function": "^3.2.0",
     "stream": "^0.0.2",
     "util": "^0.12.5"
@@ -18,6 +20,7 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.115",
     "serverless-plugin-typescript": "^2.1.4",
+    "serverless-step-functions": "^3.13.1",
     "typescript": "^5.0.4"
   }
 }
